--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -3,47 +3,144 @@ title: Equality
 author: Mattt
 category: Objective-C
 tags: nshipster
-excerpt: "The concept of equality is a central point of debate and inquiry in philosophy and mathematics, with far-reaching implications for matters of ethics, justice, and public policy. It is the task of programmers to reconcile our logical and physical understanding of equality with the semantic domains we model."
+excerpt: >
+  The concept of equality is a central topic in philosophy and mathematics, 
+  with far-reaching implications for matters of 
+  ethics, justice, and public policy. 
+  Our task as programmers is to reconcile 
+  our logical and physical understanding of equality 
+  with the domains we model.
+revisions:
+  "2013-08-26": First Publication
+  "2018-08-15": Updated and Expanded
 status:
-    swift: n/a
+  swift: n/a
 ---
 
-The concept of equality is a central point of debate and inquiry in philosophy and mathematics, with far-reaching implications for matters of ethics, justice, and public policy.
+The concept of equality is a central topic in philosophy and mathematics,
+with far-reaching implications for matters of ethics, justice, and public policy.
 
-From an empiricist perspective of the universe, two objects are equal if they are indistinguishable from one another in measurable observations. On a human scale, egalitarians hold that individuals should be considered equal members of the societal, economic, political, and judicial systems they inhabit.
+From an empiricist perspective of the universe,
+two objects are equal if they're indistinguishable by measurable observation.
+On a human scale,
+egalitarians hold that individuals should be considered equal members of the
+societal, economic, political, and judicial systems they inhabit.
 
-It is the task of programmers to reconcile our logical and physical understanding of equality with the semantic domains we model. There is a subtlety to the question of equality, too often overlooked. Jumping into implementation without sufficient understanding of semantics can lead to unnecessary work that produces incorrect results. Though an understanding of the mathematical and logical system underpinning is equally essential to making things work as modeled.
+Our task as programmers is to reconcile
+our logical and physical understanding of equality
+with the domains we model.
+And to do this correctly,
+we must start from a place of understanding.
 
-While the temptation for all technical blog posts is to skim for headings and code samples, please take a few minutes to read and understand all of this. **Copying relevant-looking code verbatim without knowing why its there may lead to incorrect behavior**. With all seriousness, equality is one of those topics—in Objective-C in particular—where there is still [a great deal of confusion](http://stackoverflow.com/questions/254281/best-practices-for-overriding-isequal-and-hash).
+So I invite you to take a moment to consider these broader questions;
+resist the urge to skim this article
+in search of relevant-looking code to copy-paste verbatim.
+Equality in Objective-C is a topic that remains a frequent source of confusion
+and deserves our full and undivided attention.
 
 ## Equality & Identity
 
-First and foremost, it is important to make a distinction between _equality_ and _identity_.
+First and foremost,
+let's make a distinction between
+<dfn>equality</dfn> and <dfn>identity</dfn>.
 
-Two objects may be _equal_ or _equivalent_ to one another, if they share a common set of observable properties. Yet, those two objects may still be thought to be _distinct_, each with their own _identity_. In programming, an object's identity is tied to its memory address.
+Two objects may be _equal_ or _equivalent_ to one another
+if they share a common set of observable properties.
+Yet those two objects may be thought to be _distinct_,
+each with their own _identity_.
 
-`NSObject` tests equality with another object with the method `isEqual:`. In its base implementation, an equality check is essentially a test for identity. Two `NSObject`s are considered equal if they point to the same memory address.
+In Objective-C, an object's identity is tied to its memory address.
+When you use the `==` operator to compare two objects in Objective-C,
+you're checking to see if they point to the same location in memory.
+
+`NSObject` and its subclasses designate the `isEqual:` method
+to determine equality between two objects.
+In its base implementation,
+an equality check simply tests for equal identity:
 
 ```objc
-@implementation NSObject (Approximate)
-- (BOOL)isEqual:(id)object {
-  return self == object;
-}
-@end
+NSObject *a = [NSObject new];
+NSObject *b = [NSObject new];
+
+BOOL objectsHaveSameIdentity = (a == b); // NO
+BOOL objectsAreEqual = ([a isEqual:b]); // NO
 ```
 
-For container classes like `NSArray`, `NSDictionary`, and `NSString`, the expected and indeed more useful behavior would be to do a deep equality comparison, to test that each member in the collection is equal.
+However, some `NSObject` subclasses override `isEqual:`
+and thereby redefine the criteria for equality:
 
-Subclasses of `NSObject` implementing their own `isEqual:` method are expected to do the following:
-
-- Implement a new `isEqualTo__ClassName__:` method, which performs the meaningful value comparison.
-- Override `isEqual:` to make class and object identity checks, falling back on the aforementioned value comparison method.
-- Override `hash`, which will be described in the next section.
-
-Here's an idea of how `NSArray` might do this (ignoring, for this example, that as a [class cluster](https://developer.apple.com/library/ios/documentation/general/conceptual/CocoaEncyclopedia/ClassClusters/ClassClusters.html), the actual implementation would be significantly more complicated):
+An `NSValue` object is a wrapper around an underlying value.
+If you construct two `NSValue` objects from the same value,
+they'll return `NO` when compared with the `==` operator,
+but `YES` when compared using the `isEqual:` method:
 
 ```objc
-@implementation NSArray (Approximate)
+NSPoint point = NSMakePoint(2.0, 3.0);
+NSValue *a = [NSValue valueWithPoint:point];
+NSValue *b = [NSValue valueWithPoint:point];
+
+BOOL valuesHaveSameIdentity = (a == b); // NO
+BOOL valuesAreEqual = ([a isEqual:b]); // YES
+```
+
+`NSObject` and `NSValue` have different semantics for equality,
+and understanding the difference between them
+is the key to understanding how equality works in most programming languages.
+
+### Value vs. Reference Semantics
+
+If the most important thing about an object is its **state**,
+then it's known as a <dfn>value type</dfn>,
+and its observable properties are used to determine equality.
+
+If the most important thing about an object is its **identity**,
+then it's known as a <dfn>reference type</dfn>,
+and its memory address is used to determine equality.
+
+The naming of `NSValue` is therefore appropriate
+because objects of that type follow <dfn>value semantics</dfn>
+when determining equality in `isEqual:`.
+
+You'll find plenty of other value types throughout Foundation ---
+just look for their telltale `isEqualTo<#ClassName#>:` method.
+For example:
+
+- `NSArray -isEqualToArray:`
+- `NSAttributedString -isEqualToAttributedString:`
+- `NSData -isEqualToData:`
+- `NSDate -isEqualToDate:`
+- `NSDictionary -isEqualToDictionary:`
+- `NSHashTable -isEqualToHashTable:`
+- `NSIndexSet -isEqualToIndexSet:`
+- `NSNumber -isEqualToNumber:`
+- `NSOrderedSet -isEqualToOrderedSet:`
+- `NSSet -isEqualToSet:`
+- `NSString -isEqualToString:`
+- `NSTimeZone -isEqualToTimeZone:`
+
+> When comparing two instances of any of these classes,
+> use these high-level methods rather than `isEqual:`.
+
+Types that encapsulate a single value,
+such as `NSDate`,
+perform an equality comparison of that value.
+In the case of `NSDate`,
+which represents a point in time relative to an absolute reference date
+(1 Jan 2001 00:00:00 GMT),
+objects are compared using their
+[offset value](https://developer.apple.com/documentation/corefoundation/cfabsolutetime?language=objc).
+
+For container classes like `NSArray` and `NSDictionary`,
+deep equality comparison is performed
+by checking that each member-wise pair in the collections are equal to each other.
+Here's an idea of how `NSArray` might implement `isEqualToArray:`,
+and how that relates to its implementation of `isEqual:`
+(ignoring for a moment that, as a
+[class cluster](https://developer.apple.com/library/ios/documentation/general/conceptual/CocoaEncyclopedia/ClassClusters/ClassClusters.html),
+the actual implementation would be significantly more complicated):
+
+```objc
+@implementation NSArray // Simplified
 - (BOOL)isEqualToArray:(NSArray *)array {
   if (!array || [self count] != [array count]) {
     return NO;
@@ -72,154 +169,276 @@ Here's an idea of how `NSArray` might do this (ignoring, for this example, that 
 @end
 ```
 
-The following `NSObject` subclasses in Foundation have custom equality implementations, with the corresponding method:
+### String Interning
 
-- `NSAttributedString -isEqualToAttributedString:`
-- `NSData -isEqualToData:`
-- `NSDate -isEqualToDate:`
-- `NSDictionary -isEqualToDictionary:`
-- `NSHashTable -isEqualToHashTable:`
-- `NSIndexSet -isEqualToIndexSet:`
-- `NSNumber -isEqualToNumber:`
-- `NSOrderedSet -isEqualToOrderedSet:`
-- `NSSet -isEqualToSet:`
-- `NSString -isEqualToString:`
-- `NSTimeZone -isEqualToTimeZone:`
-- `NSValue -isEqualToValue:`
-
-When comparing two instances of any of these classes, one is encouraged to use these high-level methods rather than `isEqual:`.
-
-However, our theoretical implementation is yet incomplete. Let's turn our attention now to `hash` (after a quick detour to clear something up about `NSString`:
-
-### The Curious Case of `NSString` Equality
-
-As an interesting aside, consider the following:
+After learning about the differences between reference and value semantics,
+and how they change the behavior of `==` and `isEqual:`,
+you may be confused by the following behavior:
 
 ```objc
 NSString *a = @"Hello";
 NSString *b = @"Hello";
-BOOL wtf = (a == b); // YES
+
+BOOL valuesHaveSameIdentity = (a == b); // YES (?)
+BOOL valuesAreEqual = ([a isEqual:b]); // YES
 ```
 
-Let it be perfectly clear that the correct way to compare `NSString` objects is to use `-isEqualToString:`. **Under no circumstances should you compare `NSString` with the `==` operator.**
+_What?_
+`NSString` is a value type,
+so why does `==` return `YES` for what should be two different objects?
 
-So what's going on here? Why does this work, when the same code for `NSArray` or `NSDictionary` literals wouldn't work?
+It all has to do with an optimization technique known as
+[string interning](https://en.wikipedia.org/wiki/String_interning),
+whereby one copy of immutable string value is copied for each distinct value.
+`NSString *a` and `NSString *b`
+point to the same copy of the interned string value `@"Hello"`.
 
-It all has to do with an optimization technique known as [string interning](https://en.wikipedia.org/wiki/String_interning), whereby one copy of immutable string value is copied for each distinct value. `NSString *a` and `*b` point to the same copy of the interned string value `@"Hello"`. _Note that this only works for statically defined immutable strings._
+Objective-C selector names are also stored as interned strings in a shared pool.
+This is an important optimization
+for a language that operates by passing messages back and forth;
+being able to quickly check strings by pointer equality
+has a huge impact on runtime performance.
 
-Interestingly enough, Objective-C selector names are also stored as interned strings in a shared string pool.
+> Note that this only works for statically-defined, immutable strings.
 
-`themoreyouknow.gif`.
+### Tagged Pointers
+
+"Fair enough," you might say to yourself at this point.
+"Strings are important and complicated,
+so I understand why things may not work as I originally expected."
+
+Unfortunately,
+your understanding would be further confounded
+when `NSDate` doesn't work as you expect, either:
+
+```objc
+NSTimeInterval timeInterval = 556035120;
+NSDate *a = [NSDate dateWithTimeIntervalSinceReferenceDate:timeInterval];
+NSDate *b = [NSDate dateWithTimeIntervalSinceReferenceDate:timeInterval];
+
+BOOL valuesHaveSameIdentity = (a == b); // YES (?)
+BOOL valuesAreEqual = ([a isEqual:b]); // YES
+```
+
+_Seriously?_
+We spent all that time explaining the difference between `==` and `isEqual:`
+only to learn that it's all a lie?
+
+Well... kinda.
+Not so much a lie as an omission.
+
+What you're seeing here is another optimization technique at work,
+known as
+[pointer tagging](https://en.wikipedia.org/wiki/Tagged_pointer).
+
+The Objective-C runtime,
+when running in 64-bit mode,
+represents object pointers using 64-bit integers.
+Normally, this integer value points to an address in memory
+where the object is stored.
+But as an optimization,
+some small values can be stored directly in the pointer itself.
+If the least-significant bit is set to `1`,
+a pointer is considered to be <dfn>tagged</dfn>;
+the runtime reads the next 3 bits to determine the tagged class
+and then initializes a value of that class using the next 60 bits.
+
+If we run the `NSDate` comparison code again with the debugger turned on,
+we can confirm that `a` and `b` are both instances of `__NSTaggedDate *`
+with odd pointer values (i.e. their least-significant digit is `1`).
+
+> As an interesting tie-in to our previous section,
+> `NSString` gained support for tagged pointers in macOS 10.10 & iOS 8.
+> [Mike Ash](https://github.com/mikeash)
+> has [a fascinating write-up](https://mikeash.com/pyblog/friday-qa-2015-07-31-tagged-pointer-strings.html)
+> of how that works.
+
+Only a handful of Foundation types implement tagged pointers,
+so don't expect your own objects to magically get this behavior.
 
 ## Hashing
 
-The primary use case of object equality tests for everyday object-oriented programming is to determine collection membership. To keep this fast, subclasses with custom equality implementations are expected to implement `hash` as well:
+One of the most important applications of object equality
+is to determine collection membership.
+In order to keep this fast for `NSDictionary` and `NSSet` collections,
+subclasses with custom equality implementations
+are expected to implement the `hash` method
+in a way that satisfies the following criteria:
 
-- Object equality is _commutative_ (`[a isEqual:b]` ⇒ `[b isEqual:a]`)
-- If objects are equal, then their `hash` values must also be equal (`[a isEqual:b]` ⇒ `[a hash] == [b hash]`)
-- However, the converse does not hold: two objects need not be equal in order for their hash values to be equal (`[a hash] == [b hash]` ¬⇒ `[a isEqual:b]`)
+- Object equality is _commutative_
+  (`[a isEqual:b]` ⇒ `[b isEqual:a]`)
+- If objects are equal,
+  then their `hash` values must also be equal
+  (`[a isEqual:b]` ⇒ `[a hash] == [b hash]`)
+- However, the converse does not hold:
+  two objects can have the same hash values,
+  but not be equal to one another
+  (`[a hash] == [b hash]` ¬⇒ `[a isEqual:b]`)
 
 Now for a quick flashback to Computer Science 101:
 
 ---
 
-A [hash table](https://en.wikipedia.org/wiki/Hash_table) is a fundamental data structure in programming, and it's what enables `NSSet` & `NSDictionary` to have fast (`O(1)`) lookup of elements.
+A [hash table](https://en.wikipedia.org/wiki/Hash_table)
+is a fundamental data structure in programming.
 
-We can best understand hash tables by contrasting them to arrays:
+We can best understand hash tables by contrasting them to lists:
 
-**Arrays** store elements in sequential indexes, such that an Array of size `n` will have slots at positions `0`, `1`, up to `n - 1`. To determine where an element is stored in the array (if at all), each position would have to be checked one-by-one (unless the array happens to be sorted, but that's another story).
+**Lists** store elements sequentially.
+If you want to see whether a particular object is contained by a list,
+you must check each element in the list sequentially
+until you either find what you're looking for or run out of items.
+Therefore, the amount of time it takes to perform a lookup
+has a linear relationship to the number of elements in the list (`O(n)`).
+`NSArray` is the primary list type in Foundation.
 
-**Hash Tables** take a slightly different approach. Rather than storing elements sequentially (`0`, `1`, `...`, `n-1`), a hash table allocates `n` positions in memory, and uses a function to calculate a position within that range. A hash function is [deterministic](https://en.wikipedia.org/wiki/Deterministic_algorithm), and a _good_ hash function generates values in a relatively [uniform distribution](https://en.wikipedia.org/wiki/Uniform_distribution_%28discrete%29) without being too computationally expensive. A _hash collision_ occurs when two different objects calculate the same hash value. When this happens, the hash table will seek from the point of collision and place the new object in the first available place. As a hash table becomes more congested, the likelihood of collision increases, which leads to more time spent looking for a free space (hence why a hash function with a uniform distribution is so desireable).
+**Hash tables** take a slightly different approach.
+Rather than storing elements sequentially,
+a hash table allocates a fixed number of positions in memory
+and uses a function to calculate the position within that range
+for each object when it's inserted.
+A hash function is
+[deterministic](https://en.wikipedia.org/wiki/Deterministic_algorithm),
+and a _good_ hash function generates values in a relatively
+[uniform distribution](https://en.wikipedia.org/wiki/Uniform_distribution_%28discrete%29)
+without being too computationally expensive.
+Ideally, the amount of time it takes
+to find an element in a hash table is constant (`O(1)`),
+independent of how many elements are stored.
+`NSSet` and `NSDictionary` are the primary collections in Foundation
+that implement hash tables.
 
----
+> There is one important caveat to these performance characteristics, though:
+> If two different objects
+> produce the same hash value,
+> the hash table seeks from the calculated index
+> and places the new object in the first available spot.
+> We call this a <dfn>hash collision</dfn>.
+> As a hash table becomes more congested,
+> the likelihood of collision increases,
+> which leads to more time spent looking for a free space
+> (hence why a hash function with a uniform distribution is so desirable).
 
-One of the most common misconceptions about implementing a custom `hash` function comes from [affirming the consequent](https://en.wikipedia.org/wiki/Affirming_the_consequent), thinking that `hash` values _must_ be distinct. This often leads to [needlessly complicated implementations involving the magical incantation of prime numbers copied from Java textbooks](http://stackoverflow.com/a/254380/157142). In reality, a simple [`XOR`](https://en.wikipedia.org/wiki/Exclusive_or) over the hash values of critical properties is sufficient 99% of the time.
+## Best Practices when Implementing Value Types
 
-The trick is in thinking about what the critical value of an object is.
+If you're implementing a custom type
+and want it to follow value semantics,
+do the following:
 
-For an `NSDate`, the time interval since a reference date would be sufficient:
+- Implement a new `isEqualTo<#ClassName#>:` method
+  to test for value equality.
+- Override the `isEqual:` method,
+  starting with early class and object identity checks
+  and falling back on the aforementioned value equality test.
+- Override the `hash` method such that equal objects
+  produce the same hash value.
+
+As an example,
+consider the following `Color` type,
+which represents a color using floating-point values for
+red, green, and blue intensities between `0` and `1`:
 
 ```objc
-@implementation NSDate (Approximate)
-- (NSUInteger)hash {
-  return (NSUInteger)abs([self timeIntervalSinceReferenceDate]);
-}
-```
-
-For a `UIColor`, a bit-shifted sum of RGB components is a convenient calculation:
-
-```objc
-@implementation UIColor (Approximate)
-- (NSUInteger)hash {
-  CGFloat red, green, blue;
-  [self getRed:&red green:&green blue:&blue alpha:nil];
-  return ((NSUInteger)(red * 255) << 16) + ((NSUInteger)(green * 255) << 8) + (NSUInteger)(blue * 255);
-}
+@interface Color: NSObject
+@property NSNumber *red;
+@property NSNumber *green;
+@property NSNumber *blue;
 @end
 ```
 
-## Implementing `-isEqual:` and `hash` in a Subclass
+### Implementing `isEqualTo<#ClassName#>:`
 
-Bringing it all together, here's how one might override the default equality implementation in a subclass:
+The `isEqualTo<#ClassName#>:` method should be publicly declared
+and provide a test for value equality with another object of the same type.
 
 ```objc
-@interface Person
-@property NSString *name;
-@property NSDate *birthday;
-
-- (BOOL)isEqualToPerson:(Person *)person;
-@end
-
-@implementation Person
-
-- (BOOL)isEqualToPerson:(Person *)person {
-  if (!person) {
-    return NO;
-  }
-
-  BOOL haveEqualNames = (!self.name && !person.name) || [self.name isEqualToString:person.name];
-  BOOL haveEqualBirthdays = (!self.birthday && !person.birthday) || [self.birthday isEqualToDate:person.birthday];
-
-  return haveEqualNames && haveEqualBirthdays;
+- (BOOL)isEqualToColor:(Color *)color {
+    return [self.red isEqualToNumber:color.red] &&
+        [self.green isEqualToNumber:color.green] &&
+        [self.blue isEqualToNumber:color.blue];
 }
+```
 
-#pragma mark - NSObject
+Implementations of this method typically perform member-wise comparison
+between the receiver and the passed argument
+for each of the properties of that type.
+In the case of a `Color`, that means checking the
+`red`, `green` , and `blue` properties of each color for equality.
 
+> Be sure to use the corresponding value equality method
+> for each of the properties.
+
+### Implementing `isEqual:`
+
+The `isEqual:` method should delegate to
+the `isEqualTo<#ClassName#>:` method
+after testing for pointer equality
+and checking for type identity:
+
+```objc
 - (BOOL)isEqual:(id)object {
-  if (self == object) {
-    return YES;
-  }
+    if (self == object) {
+        return YES;
+    }
 
-  if (![object isKindOfClass:[Person class]]) {
-    return NO;
-  }
+    if (![object isKindOfClass:[Color class]]) {
+        return NO;
+    }
 
-  return [self isEqualToPerson:(Person *)object];
-}
-
-- (NSUInteger)hash {
-  return [self.name hash] ^ [self.birthday hash];
+    return [self isEqualToColor:(Color *)object];
 }
 ```
 
-> For the curious and pedantic, see [this post from Mike Ash](http://www.mikeash.com/pyblog/friday-qa-2010-06-18-implementing-equality-and-hashing.html) for an explanation of how `hash` implementations might be improved by bit-shifting or rotating composite values that may overlap.
+### Implementing `hash`
 
-## Don't Overthink It
+A common misconception about custom `hash` implementations comes from
+[affirming the consequent](https://en.wikipedia.org/wiki/Affirming_the_consequent):
+thinking that `hash` values _must_ be distinct.
+Although an ideal hash function would produce all distinct values,
+this is significantly more difficult than what's required ---
+which is, if you'll recall:
 
-While all of this has been an interesting exercise in epistemology and computer science, there is a lingering pragmatic detail:
+> - Override the `hash` method such that equal objects
+>   produce the same hash value.
 
-**You don't usually need to implement this.**
+A simple way to satisfy this requirement is to simply
+[`XOR`](https://en.wikipedia.org/wiki/Exclusive_or)
+over the hash values of the properties that determine equality.
 
-There are many situations where the default identity check (two variables point to the same address in memory) is desirable behavior. This comes as a consequence of the limitations of data modeling.
+```objc
+- (NSUInteger)hash {
+    return [self.red hash] ^ [self.green hash] ^ [self.blue hash];
+}
+```
 
-Take, for instance, the previous example of the `Person` class. It's not inconceivable that two individuals would share a common name _and_ birthday. In reality, this crisis of identity would be resolved by additional information, whether it's a system-dependent identifier like a Social Security Number, their parents' identities, or any other physical attributes.
+Yes, this approach results in collisions
+for objects with the same values for different properties
+(for example, cyan and yellow produce the same hash value,
+because each has color channels with intensity equal to `1`).
+However, it may be good enough for what you're doing.
 
-> Yet even that additional information is not entirely foolproof. After all, that person could be cloned, teleported, or whisked away into a parallel universe. Unlikely? Sure. But much of the challenge in modeling systems is dealing with imperfect assumptions. Just saying.
+Unless you have reason to believe that a better `hash` implementation
+would improve performance in a meaningful way,
+you're probably better off focusing your time elsewhere.
+(That's not to say that _all_ optimizations are premature,
+but rather that complicated hash functions frequently are).
 
-Ultimately, it's up to the abstraction to isolate the significant, identifying features that the system cares about, and disregard the rest. The developer can then decide whether objects will be used in such a way that set membership calculations should care about. In a program that only records `name` and `birthday`, it may perfectly correct to treat congruent instances as distinct entities.
+For the curious and pedantic,
+Mike Ash has
+[another blog post](http://www.mikeash.com/pyblog/friday-qa-2010-06-18-implementing-equality-and-hashing.html)
+with suggestions for improving hash functions using techniques like
+bit-shifting and rotating composite values that may overlap.
 
 ---
 
-Hopefully, after all of this explanation, we all stand with equal footing on this slippery subject.
+Hopefully, after all of this explanation,
+we can all stand with an equal footing on this slippery subject.
 
-As humans, we strive to understand and implement equality in our society and economy; in the laws and leaders that govern us; in the understanding that we extend to one another as we journey through existence. May we continue towards that ideal, where individuals are judged by the contents of their character, just as we judge a variable by the contents of its memory address.
+As humans,
+we strive to understand and implement equality in our society and economy;
+in the laws and leaders that govern us, and
+in the understanding that we extend to one another
+as we journey through existence.
+May we continue towards that ideal,
+where individuals are judged by the contents of their character,
+just as we judge a variable by the contents of its memory address.
