Update iOS 12 article

--- a/2018-09-17-ios-12.md
+++ b/2018-09-17-ios-12.md
@@ -31,17 +31,17 @@ like
 and the new [Network](https://developer.apple.com/documentation/network)
 and [Natural Language](https://developer.apple.com/documentation/naturallanguage) frameworks.
 
-But if you're looking for this year's
-[Release Notes](https://developer.apple.com/library/archive/releasenotes/General/RN-iOSSDK-11/index.html)...
-you're out of luck.
-At the time of writing,
-[we're still waiting on those](https://developer.apple.com/search/?q=iOS%2012%20%22release%20notes%22).
-There's [What's New in iOS](https://developer.apple.com/ios/whats-new/),
-which offers a nice top-level overview.
 But here at NSHipster,
 we're interested in the nitty-gritty:
 the small (dare we say, _obscure_?)
 changes that add up to make a big impact to our day-to-day.
+This year's
+[iOS 12 release notes](https://developer.apple.com/documentation/ios_release_notes/ios_12_release_notes)
+and
+[Foundation Release Notes](https://developer.apple.com/documentation/ios_release_notes/ios_12_release_notes/foundation_release_notes)
+cover many of these changes,
+however they don't tell the whole story.
+For that, you have to dig deeper.
 
 In celebration of this week's release of iOS 12,
 we're sharing what we found after trawling through the
