Fix capitalization of iPhone XS

--- a/2018-09-17-ios-12.md
+++ b/2018-09-17-ios-12.md
@@ -114,7 +114,7 @@ the most that Apple engineers would offer during Lab sessions was
 "no comment".
 
 But all became clear with last week's announcements
-of the iPhone Xs, iPhone Xs Max and iPhone XR.
+of the iPhone XS, iPhone XS Max and iPhone XR.
 These devices support reading NFC tags in the background,
 and if you're running iOS 12 on the latest generation of devices,
 you'll be able to ---
